[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphene-quality-analyzer"
version = "0.1.0"
description = "Raman spectroscopy analysis tool for graphene quality assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "plotly>=5.17.0",
    "xlsxwriter>=3.1.0",
    "kaleido",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphene_quality_analyzer"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.envs.default.scripts]
app = "streamlit run src/graphene_quality_analyzer/app.py"
test = "pytest {args:tests}"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"